--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ develop-eggs/
 dist/
 downloads/
 eggs/
+.eggs/
 lib/
 lib64/
 parts/
@@ -58,3 +59,6 @@ node_modules
 .tmp
 .sass-cache
 bower_components
+
+# setup.py added symlinks
+linkcheckerjs/jslib
