--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,14 @@
 language: python
 python:
  - "2.7"
+
 node_js:
- - 0.8
- - 0.6
+ - "0.10"
+
+before_install:
+    - node --version
+    - npm --version
+
 install:
     - python setup.py install
 
